# etf_service

./: .env  .env.example  .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 1cbc46805e81_add_etfrecord_model.py  c08c46841348_fix_model_import_and_update_tables.py
app/: config.py  main.py
app/database/: session.py
src/etf_service/: logging_config.py  main.py
src/etf_service/app/: logging_config.py  main.py
src/etf_service/app/database/: base.py
src/etf_service/app/models/: holding_record.py
src/etf_service/app/routers/: __init__.py  holding_record_api.py  holding_upload.py
src/etf_service/app/schemas/: holding_record.py
src/etf_service/app/services/: holding_record_service.py
src/etf_service/database/: base.py  session.py
src/etf_service/models/: holding_record.py
src/etf_service/static/: holding_chart.html
src/etf_service/tmp/: xn.py
